# missouri-vsr-processing

./: .gitignore  NOTES.md  README.md  about-the-data.md  agents.md  pyproject.toml
analysis/: .gitignore  findings_memo.md
analysis/src/: dot-chart.md  index.md  lollipop.md  ridgeline.md  spiral.md
analysis/src/data/: agency_comments.csv  agency_contraband_2024.csv  agency_population.csv  agency_profiles.csv  agency_profiles_11yr.csv  census_population_by_year.csv  contraband_hit_rates.csv  dw_black_central.csv  dw_black_kc_metro.csv  dw_black_northeast.csv  dw_black_northwest.csv  dw_black_regional.csv  dw_black_southeast.csv  dw_black_southwest.csv  dw_black_stl_metro.csv  dw_hispanic_central.csv  dw_hispanic_kc_metro.csv  dw_hispanic_northeast.csv  dw_hispanic_northwest.csv  dw_hispanic_regional.csv  dw_hispanic_southeast.csv  dw_hispanic_southwest.csv  dw_hispanic_stl_metro.csv  dw_white_central.csv  (+18 more)
data/src/: canonical_crosswalk.csv
data_checks/: row_sanity_checks.csv  row_sanity_checks_2014.csv  row_sanity_checks_2015.csv  row_sanity_checks_2016.csv  row_sanity_checks_2017.csv  row_sanity_checks_2018.csv  row_sanity_checks_2019.csv  row_sanity_checks_2020.csv  row_sanity_checks_2021.csv  row_sanity_checks_2022.csv  row_sanity_checks_2023.csv  row_sanity_checks_2024.csv
missouri_vsr/: asset_checks.py  assets.py  audit_assets.py  cli.py  cli_crosswalk.py  definitions.py  resources.py
missouri_vsr/asset_checks/: __init__.py  asset_checks.py
missouri_vsr/assets/: __init__.py  agency_reference.py  audit.py  extract.py  gis.py  processed.py  reports.py  s3_utils.py
missouri_vsr/cli/: __init__.py  cli.py  crosswalk.py
missouri_vsr/definitions/: __init__.py  definitions.py
missouri_vsr/resources/: __init__.py  resources.py
notebooks/: agency_census_crosswalk.csv  exploration.ipynb  extend_census_by_year.py  outreach_list.csv  outreach_new_community_sources.csv  prior_vsr_coverage.csv  story_analysis.py  story_analysis_results.csv
notebooks/marimo/: statewide_year_sums.py  story_analysis.py
notebooks/observable/: findings_memo.md  observablehq.config.js  package-lock.json  package.json
notebooks/regional-charts/: index.html  package-lock.json  package.json
run_configs/: example_2023_sample.yaml  examples.yaml  s3_shared_bucket.yaml  wsl_low_mem.yaml
tests/: test_agency_geocode.py  test_agency_name_normalization.py  test_gis_checks.py  test_ops_functional.py  test_pdftotext_parser.py  test_rank_percentile.py
(+2 files in other folders)
